prevent wraps

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -99,7 +99,7 @@ code,
 pre {
   background-color: #f8f8f8;
   font-family: monospace;
-  white-space: nowrap;
+  white-space: pre;
 }
 
 q,
